@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2020 the original author or authors.
+ * Copyright 2002-2022 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -18,6 +18,7 @@ package org.springframework.integration.webflux.config;
 
 import org.w3c.dom.Element;
 
+import org.springframework.beans.factory.config.BeanDefinition;
 import org.springframework.beans.factory.config.RuntimeBeanReference;
 import org.springframework.beans.factory.support.BeanDefinitionBuilder;
 import org.springframework.beans.factory.xml.ParserContext;
@@ -31,6 +32,7 @@ import org.springframework.util.StringUtils;
  * Parser for the 'outbound-channel-adapter' element of the webflux namespace.
  *
  * @author Artem Bilan
+ * @author Jatin Saxena
  *
  * @since 5.0
  */
@@ -77,6 +79,14 @@ public class WebFluxOutboundChannelAdapterParser extends HttpOutboundChannelAdap
 					BeanDefinitionBuilder.rootBeanDefinition(ExpressionFactoryBean.class)
 							.addConstructorArgValue(typeExpression)
 							.getBeanDefinition());
+		}
+
+		BeanDefinition attributeVariablesExpressionDef =
+				IntegrationNamespaceUtils.createExpressionDefIfAttributeDefined("attribute-variables-expression",
+						element);
+
+		if (attributeVariablesExpressionDef != null) {
+			builder.addPropertyValue("attributeVariablesExpression", attributeVariablesExpressionDef);
 		}
 
 		return builder;
