@@ -27,6 +27,7 @@ import org.springframework.core.ParameterizedTypeReference;
 import org.springframework.core.io.Resource;
 import org.springframework.expression.Expression;
 import org.springframework.expression.common.LiteralExpression;
+import org.springframework.expression.spel.support.StandardEvaluationContext;
 import org.springframework.http.HttpEntity;
 import org.springframework.http.HttpMethod;
 import org.springframework.http.HttpStatusCode;
@@ -35,11 +36,13 @@ import org.springframework.http.ReactiveHttpInputMessage;
 import org.springframework.http.ResponseEntity;
 import org.springframework.http.client.reactive.ClientHttpRequest;
 import org.springframework.http.client.reactive.ClientHttpResponse;
+import org.springframework.integration.expression.ExpressionUtils;
 import org.springframework.integration.expression.ValueExpression;
 import org.springframework.integration.http.outbound.AbstractHttpRequestExecutingMessageHandler;
 import org.springframework.lang.Nullable;
 import org.springframework.messaging.Message;
 import org.springframework.util.Assert;
+import org.springframework.util.CollectionUtils;
 import org.springframework.util.MultiValueMap;
 import org.springframework.web.reactive.function.BodyExtractor;
 import org.springframework.web.reactive.function.BodyExtractors;
@@ -57,6 +60,7 @@ import org.springframework.web.util.DefaultUriBuilderFactory;
  * @author Artem Bilan
  * @author Gary Russell
  * @author David Graff
+ * @author Jatin Saxena
  *
  * @since 5.0
  *
@@ -74,6 +78,11 @@ public class WebFluxRequestExecutingMessageHandler extends AbstractHttpRequestEx
 	private BodyExtractor<?, ? super ClientHttpResponse> bodyExtractor;
 
 	private Expression publisherElementTypeExpression;
+
+	private Expression attributeVariablesExpression;
+
+	private StandardEvaluationContext evaluationContext;
+
 
 	/**
 	 * Create a handler that will send requests to the provided URI.
@@ -193,9 +202,26 @@ public class WebFluxRequestExecutingMessageHandler extends AbstractHttpRequestEx
 		this.publisherElementTypeExpression = publisherElementTypeExpression;
 	}
 
+	/**
+	 * Configure expression to evaluate request attribute which will be added to webclient request attribute.
+	 * @param attributeVariablesExpression the expression to evaluate request attribute.
+	 * @since 6.0
+	 * @see WebClient.RequestBodySpec#attributes
+	 */
+	public void setAttributeVariablesExpression(Expression attributeVariablesExpression) {
+		Assert.notNull(attributeVariablesExpression, "'attributeVariablesExpression' must not be null");
+		this.attributeVariablesExpression = attributeVariablesExpression;
+	}
+
 	@Override
 	public String getComponentType() {
 		return (isExpectReply() ? "webflux:outbound-gateway" : "webflux:outbound-channel-adapter");
+	}
+
+	@Override
+	protected final void doInit() {
+		super.doInit();
+		this.evaluationContext = ExpressionUtils.createStandardEvaluationContext(getBeanFactory());
 	}
 
 	@Override
@@ -230,11 +256,24 @@ public class WebFluxRequestExecutingMessageHandler extends AbstractHttpRequestEx
 		}
 
 		requestSpec = requestSpec.headers(headers -> headers.putAll(httpRequest.getHeaders()));
+
+		if (this.attributeVariablesExpression != null) {
+			Map<String, Object> attributeMap = evaluateAttributeVariables(requestMessage);
+			if (!CollectionUtils.isEmpty(attributeMap)) {
+				requestSpec = requestSpec.attributes(map -> map.putAll(attributeMap));
+			}
+		}
+
 		BodyInserter<?, ? super ClientHttpRequest> inserter = buildBodyInserterForRequest(requestMessage, httpRequest);
 		if (inserter != null) {
 			requestSpec.body(inserter);
 		}
 		return requestSpec;
+	}
+
+	@SuppressWarnings("unchecked")
+	private Map<String, Object> evaluateAttributeVariables(Message<?> requestMessage) {
+		return this.attributeVariablesExpression.getValue(this.evaluationContext, requestMessage, Map.class);
 	}
 
 	@Nullable
